test/Fail/AnonymousRecConstrAmbig.err
AnonymousRecConstrAmbig.agda:9,5-19: error: [ConstructorNameOfNonRecord]
Only record types have constructor names, but mk is the name of an
ambiguous constructor.
when scope checking mk.constructor
